@@ -9,4 +9,13 @@
 [[1, matrix(0,2)]]
 [[1, matrix(0,2)], [2, Mat([2, 1])], [3, Mat([3, 1])], [4, Mat([2, 2])], [6,
  [2, 1; 3, 1]], [12, [2, 2; 3, 1]]]
+[1, matrix(0,2)]
+[2, Mat([2, 1])]
+[4, Mat([2, 2])]
+[5, Mat([5, 1])]
+[10, [2, 1; 5, 1]]
+[20, [2, 2; 5, 1]]
+[25, Mat([5, 2])]
+[50, [2, 1; 5, 2]]
+[100, [2, 2; 5, 2]]
 Total time spent: 1
