@@ -13,3 +13,6 @@ divisors(12, 1)
 for (i=1,100,
   d = divisors(i,1);
   for(j=1,#d, if (factorback(d[j][2])!=d[j][1],error(i))));
+}
+
+fordivfactored(100, d, print(d))
